# Accurity

./: .gitignore  Cargo.toml  LICENSE  Makefile.common  README.md  build.rs
Accurity/: GADA.cc  Makefile  configure  infer.cpp  infer.h  main.py  plotCPandMCP.py  plot_tre.py  read_para.cpp  read_para.h
src/: main.rs  normalize.rs  recall_precision.rs  select_het_snp.rs
