[package]
name = "accurity"
version = "1.5.1"
authors = ["u <u@X500.vw.ubuntu>"]
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
bio = "0.17.0"
rust-htslib =  { git = "https://github.com/rust-bio/rust-htslib.git", rev="ed2b565" }
byteorder = "*"
clap = "2"
csv = "1.0.0-beta.5"
flate2 = "0.2"
time = "0.1.0"
reqwest="*"
users = "0.6"